Added apples